--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "maatwebsite/excel": "^2.1",
         "cviebrock/eloquent-sluggable" : "4.1",
         "barryvdh/laravel-dompdf": "^0.8.0",
-        "mike42/escpos-php": "^2.0"
+        "mike42/escpos-php": "^2.0",
+        "barryvdh/laravel-debugbar": "~2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
